src/objects/Intake__c.object
<CustomObject>
    <fields>
        <fullName>BRI_Enrolled_In_School__c</fullName>
        <label>Enrolled In School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>College 2 Year</fullName>
                </value>
                <value>
                    <fullName>College 4 Year</fullName>
                </value>
                <value>
                    <fullName>ESL</fullName>
                </value>
                <value>
                    <fullName>GED Program</fullName>
                </value>
                <value>
                    <fullName>Graduate School</fullName>
                </value>
                <value>
                    <fullName>High/Middle School</fullName>
                </value>
                <value>
                    <fullName>Not Enrolled in School</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Vocational College</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_FAMILY_NUMBER_CR__c</fullName>
        <label>FAMILY NUMBER-CR</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FAW__c</fullName>
        <label>FAW</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FN_COUNTY_CODE__c</fullName>
        <label>FN-COUNTY CODE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FSW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSW</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_High_Risk__c</fullName>
        <label>High Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_History_of_Abortions__c</fullName>
        <label>History of Abortions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_History_of_Depression__c</fullName>
        <label>History of Depression</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_History_of_Psychiatric_Depression__c</fullName>
        <label>History of Psychiatric  Depression</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parent Survey</relationshipLabel>
        <relationshipName>Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Hx_of_CAN_had_CPS_inter_as_a_child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hx of CAN/had CPS inter. as a child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Inad_Emergency_Contact__c</fullName>
        <label>Inad Emergency Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Lifestyle_Behavior_and_Mental_Health__c</fullName>
        <label>2. Lifestyle Behaviors and Mental Health</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Location_Of_assessment__c</fullName>
        <label>Location Of assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Materials_Given__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Materials Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_No_Phone__c</fullName>
        <label>No Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Family_Code__c</fullName>
        <label>Other Family Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Other_Site_s_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Site&apos;s Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Parent_s_Childhood_Experience__c</fullName>
        <label>1. Parent&apos;s Childhood Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Parenting_Experience__c</fullName>
        <label>3. Parenting Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Partner_Unemployment__c</fullName>
        <label>Partner Unemployment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Program_Admission_Date__c</fullName>
        <label>Program Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Program_Within_County__c</fullName>
        <label>Program Within County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Programme_Admission_Date__c</fullName>
        <label>Programme Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Receive_Benefits__c</fullName>
        <label>Receive Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Referrals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrals</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Intakes</relationshipLabel>
        <relationshipName>Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Regions__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_Site__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REGION 1</fullName>
                </value>
                <value>
                    <fullName>REGION 2</fullName>
                </value>
                <value>
                    <fullName>REGION 3</fullName>
                </value>
                <value>
                    <fullName>REGION 4</fullName>
                </value>
                <value>
                    <fullName>REGION 5</fullName>
                </value>
                <value>
                    <fullName>REGION 6</fullName>
                </value>
                <value>
                    <fullName>REGION 7</fullName>
                </value>
                <value>
                    <fullName>REGION 8</fullName>
                </value>
                <value>
                    <fullName>REGION 9</fullName>
                </value>
                <value>
                    <fullName>REGION 10</fullName>
                </value>
                <value>
                    <fullName>REGION 11</fullName>
                </value>
                <value>
                    <fullName>REGION 12</fullName>
                </value>
                <value>
                    <fullName>REGION 13</fullName>
                </value>
                <value>
                    <fullName>REGION 14</fullName>
                </value>
                <value>
                    <fullName>REGION 15</fullName>
                </value>
                <value>
                    <fullName>REGION 16</fullName>
                </value>
                <value>
                    <fullName>REGION 17</fullName>
                </value>
                <value>
                    <fullName>REGION 18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Safety_Blunt_Force_Trauma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety- Blunt Force Trauma</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Safety_Carseat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety-Carseat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Safety_Co_sleeping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety- Co sleeping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Safety_Fire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety- Fire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Safety_PPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety-PPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Safety_Poison__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety-Poison</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Safety_SID_back_to_Sleep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety-SID/ back to Sleep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Safety_Shaken_baby__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety- Shaken baby</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Safety_Water_Temperature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety-Water Temperature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Safety_Water__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety-Water</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Safety_Who_Is_Watching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safety- Who Is Watching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Screen_Status__c</fullName>
        <label>Screen Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Screen_Type__c</fullName>
        <label>Screen Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Site__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GEMINUS</fullName>
                </value>
                <value>
                    <fullName>DUNE BROOK</fullName>
                </value>
                <value>
                    <fullName>SCAN</fullName>
                </value>
                <value>
                    <fullName>BAUER FAMILY</fullName>
                </value>
                <value>
                    <fullName>CHILDREN&apos;S BUREAU</fullName>
                </value>
                <value>
                    <fullName>IRELAND</fullName>
                </value>
                <value>
                    <fullName>NEW HOPE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Specify_Referral_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specify Referral Source</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipName>Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Specify_Second_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specify Second Referral</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipName>Intakes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Specify_Third_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specify Third Referral</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipName>Intakes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_State_Id__c</fullName>
        <label>State Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Survey_Result__c</fullName>
        <defaultValue>&quot;Negative&quot;</defaultValue>
        <label>Survey Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_WIC_Import_Date__c</fullName>
        <label>WIC Import Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_WIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Wanted_Adoption__c</fullName>
        <label>Wanted Adoption</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Who_Was_Present_at_the_Interview__c</fullName>
        <label>Who Was Present at Interview</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult 1</fullName>
                </value>
                <value>
                    <fullName>Adult 2</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Baby</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Why_not_Done__c</fullName>
        <label>Why not done?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safety Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN__c</fullName>
        <label>CN</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CertStartDate__c</fullName>
        <label>CertStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_DOB__c</fullName>
        <label>Child DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_EDC_Date__c</fullName>
        <label>Child EDC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_Ethnicity__c</fullName>
        <label>Child Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_First_Name__c</fullName>
        <label>Child First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Gender__c</fullName>
        <label>Child Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Last_Name__c</fullName>
        <label>Child Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Middle_Name__c</fullName>
        <label>Child Middle Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Primary_Insurance__c</fullName>
        <label>Child Primary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>HIP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Tricare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Secondary_Insurance__c</fullName>
        <label>Child Secondary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>HIP</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Tricare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Social_Security_Number__c</fullName>
        <label>Child Social Security Number</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Child_have_Regular_Health_care_Provider__c</fullName>
        <label>Child have Regular Health care Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Has provider; regular contact</fullName>
                </value>
                <value>
                    <fullName>Has provider; never been seen</fullName>
                </value>
                <value>
                    <fullName>Has provider; limited contact</fullName>
                </value>
                <value>
                    <fullName>Has provider; use emergency room only</fullName>
                </value>
                <value>
                    <fullName>No provider; use emergency room only</fullName>
                </value>
                <value>
                    <fullName>No Provider - Uses Free Clinic</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_s_Doctor_Name__c</fullName>
        <label>Child&apos;s Doctor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complications_during_labor_deliver_baby__c</fullName>
        <label>Complications during labor/deliver/baby</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complications_during_labor_deliver_mothe__c</fullName>
        <inlineHelpText>Were there complications during labor/deliver/hospital stay of mother</inlineHelpText>
        <label>Complications in labor/deliver/mother</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountyAdress__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>Adams</fullName>
                </value>
                <value>
                    <fullName>Allen</fullName>
                </value>
                <value>
                    <fullName>Bartholomew</fullName>
                </value>
                <value>
                    <fullName>Benton</fullName>
                </value>
                <value>
                    <fullName>Blackford</fullName>
                </value>
                <value>
                    <fullName>Boone</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Carroll</fullName>
                </value>
                <value>
                    <fullName>Cass</fullName>
                </value>
                <value>
                    <fullName>Clark</fullName>
                </value>
                <value>
                    <fullName>Clay</fullName>
                </value>
                <value>
                    <fullName>Clinton</fullName>
                </value>
                <value>
                    <fullName>Crawford</fullName>
                </value>
                <value>
                    <fullName>Daviess</fullName>
                </value>
                <value>
                    <fullName>Dearborn</fullName>
                </value>
                <value>
                    <fullName>Decatur</fullName>
                </value>
                <value>
                    <fullName>DeKalb</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Dubois</fullName>
                </value>
                <value>
                    <fullName>Elkhart</fullName>
                </value>
                <value>
                    <fullName>Fayette</fullName>
                </value>
                <value>
                    <fullName>Floyd</fullName>
                </value>
                <value>
                    <fullName>Fountain</fullName>
                </value>
                <value>
                    <fullName>Franklin</fullName>
                </value>
                <value>
                    <fullName>Fulton</fullName>
                </value>
                <value>
                    <fullName>Gibson</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Greene</fullName>
                </value>
                <value>
                    <fullName>Hamilton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountyLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Custom County Object</description>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipName>Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County_Of_Residence__c</fullName>
        <label>County Of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BRI_Regions__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allen</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Jasper</fullName>
                </value>
                <value>
                    <fullName>LA Porte</fullName>
                </value>
                <value>
                    <fullName>Newton</fullName>
                </value>
                <value>
                    <fullName>Porter</fullName>
                </value>
                <value>
                    <fullName>Pulaski</fullName>
                </value>
                <value>
                    <fullName>Starke</fullName>
                </value>
                <value>
                    <fullName>Elkhart</fullName>
                </value>
                <value>
                    <fullName>Kosciusko</fullName>
                </value>
                <value>
                    <fullName>Marshall</fullName>
                </value>
                <value>
                    <fullName>St.Joseph</fullName>
                </value>
                <value>
                    <fullName>Adams</fullName>
                </value>
                <value>
                    <fullName>DeKalb</fullName>
                </value>
                <value>
                    <fullName>huntington</fullName>
                </value>
                <value>
                    <fullName>LaGrange</fullName>
                </value>
                <value>
                    <fullName>Noble</fullName>
                </value>
                <value>
                    <fullName>Steuben</fullName>
                </value>
                <value>
                    <fullName>Wells</fullName>
                </value>
                <value>
                    <fullName>Whitely</fullName>
                </value>
                <value>
                    <fullName>Cass</fullName>
                </value>
                <value>
                    <fullName>Fulton</fullName>
                </value>
                <value>
                    <fullName>Howard</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Wabash</fullName>
                </value>
                <value>
                    <fullName>Benton</fullName>
                </value>
                <value>
                    <fullName>Carroll</fullName>
                </value>
                <value>
                    <fullName>Clinton</fullName>
                </value>
                <value>
                    <fullName>Fountain</fullName>
                </value>
                <value>
                    <fullName>Tippecanoe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Referral_Screen_Closed__c</fullName>
        <label>Date Referral / Screen Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Consent__c</fullName>
        <label>Date of Consent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Drug_during_pregnancy__c</fullName>
        <label>Drug during pregnancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDC__c</fullName>
        <label>EDC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earnings__c</fullName>
        <label>Earnings</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_level__c</fullName>
        <label>Education level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full Time</fullName>
                </value>
                <value>
                    <fullName>8th Grade or less</fullName>
                </value>
                <value>
                    <fullName>Certificate of High School Completion</fullName>
                </value>
                <value>
                    <fullName>Four Year College Degree</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>Graduate Degree</fullName>
                </value>
                <value>
                    <fullName>High School Graduate</fullName>
                </value>
                <value>
                    <fullName>Some College</fullName>
                </value>
                <value>
                    <fullName>Some High School</fullName>
                </value>
                <value>
                    <fullName>Technical / Certification</fullName>
                </value>
                <value>
                    <fullName>Two Year Degree</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>